And more bold text

--- a/main.html
+++ b/main.html
@@ -1,3 +1,4 @@
-<h1>Hey, this is my first site! This is using h1</h1>
-<p>And as I'm learning I can see that this is a paragraph that uses p</p>
-<a href="https://google.com" target="_blank" title="Surprise! Open a tab to Google">and this is a link that uses a href and also target=_blank why not hover over this to see what title does</a>
+<h1>Hey, this is my first site! This is using <b>h1</b></h1>
+<p>And as I'm learning I can see that this is a <b>paragraph</b> that uses <b>p</b></p>
+<p>See the <b>Bold Text</b> that's because of <b>b</b></p>
+<a href="https://google.com" target="_blank" title="Surprise! Open a tab to Google">and this is a <b>link</b> that uses <b>a</b> and </b>href=</b> and also target=_blank why not hover over this to see what title does</a>
