--- a/style.html
+++ b/style.html
@@ -2,14 +2,28 @@
 <html>
 <head>
     <title>Style Test</title>
+    <style type="text/css">
+        h1{
+            font-size: 30px;
+            color: salmon;
+        }
+        h2{
+            font-size: 20px;
+            color: hotpink;
+        }
+        .big{
+            font-size: 60px;
+        }
+    </style>
 </head>
 <body>
 
-    <h1 style="font-size: 30px; color: #9BF34E;">Heading 1 - 1</h1>
-    <h1>Heading 1 - 2</h1>
+    <h1>Heading 1 - 1</h1>
+    <h1 class="big">Heading 1 - 2</h1>
     <h1>Heading 1 - 3</h1>
-    <h2>Heading 2 - 1</h2>
+    <h2 class="big">Heading 2 - 1</h2>
     <h2>Heading 2 - 2</h2>
-    <h2>Heading 2 - 3</h2>
+    <h2 class="big">Heading 2 - 3</h2>
+
 </body>
 </html>
